--- a/TMFramework/test-output/old/Suite/methods-alphabetical.html
+++ b/TMFramework/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1a8d5">  <td>19/01/23 09:48:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module1.TC101()[pri:0, instance:testScripts.Module1@64f6106c]">TC101</td> 
-  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="a1a8d5">  <td>19/01/23 09:48:51</td>   <td>5146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Module1.after()[pri:0, instance:testScripts.Module1@64f6106c]">&lt;&lt;after</td> 
-<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>19/01/23 09:48:55</td>   <td>9268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testScripts.Module1@64f6106c]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>19/01/23 09:48:55</td>   <td>9643</td> <td title="&lt;&lt;BaseClass.aftersuite()[pri:0, instance:testScripts.Module1@64f6106c]">&lt;&lt;aftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="a1a8d5">  <td>19/01/23 09:47:57</td>   <td>-48519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Module1.before()[pri:0, instance:testScripts.Module1@64f6106c]">&gt;&gt;before</td> 
-<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>19/01/23 09:47:56</td>   <td>-49473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforemethod(java.lang.reflect.Method)[pri:0, instance:testScripts.Module1@64f6106c]">&gt;&gt;beforemethod</td> 
-<td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>19/01/23 09:47:56</td>   <td>-49840</td> <td title="&gt;&gt;BaseClass.beforesuite()[pri:0, instance:testScripts.Module1@64f6106c]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418385211</td>   <td></td> </tr>
+<tr bgcolor="81e082">  <td>19/01/26 13:14:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module1.TC101()[pri:0, instance:testScripts.Module1@2db7a79b]">TC101</td> 
+  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="81e082">  <td>19/01/26 13:14:27</td>   <td>3788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Module1.after()[pri:0, instance:testScripts.Module1@2db7a79b]">&lt;&lt;after</td> 
+<td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/01/26 13:14:31</td>   <td>7092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testScripts.Module1@2db7a79b]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/01/26 13:14:31</td>   <td>7354</td> <td title="&lt;&lt;BaseClass.aftersuite()[pri:0, instance:testScripts.Module1@2db7a79b]">&lt;&lt;aftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="81e082">  <td>19/01/26 13:13:40</td>   <td>-44102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Module1.before()[pri:0, instance:testScripts.Module1@2db7a79b]">&gt;&gt;before</td> 
+<td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/01/26 13:13:39</td>   <td>-44649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforemethod(java.lang.reflect.Method)[pri:0, instance:testScripts.Module1@2db7a79b]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/01/26 13:13:39</td>   <td>-44839</td> <td title="&gt;&gt;BaseClass.beforesuite()[pri:0, instance:testScripts.Module1@2db7a79b]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293618474</td>   <td></td> </tr>
 </table>
