--- a/TMFramework/test-output/old/Default suite/methods.html
+++ b/TMFramework/test-output/old/Default suite/methods.html
@@ -1,28 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:00</td>   <td>0</td> <td title="&gt;&gt;BaseClass.beforesuite()[pri:0, instance:testScripts.Module1@51c8530f]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:00</td>   <td>227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforemethod(java.lang.reflect.Method)[pri:0, instance:testScripts.Module1@51c8530f]">&gt;&gt;beforemethod</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:01</td>   <td>821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Module1.before()[pri:0, instance:testScripts.Module1@51c8530f]">&gt;&gt;before</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:17</td>   <td>16306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module1.TC101()[pri:0, instance:testScripts.Module1@51c8530f]">TC101</td> 
-  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:21</td>   <td>20830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Module1.after()[pri:0, instance:testScripts.Module1@51c8530f]">&lt;&lt;after</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:25</td>   <td>24496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testScripts.Module1@51c8530f]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:25</td>   <td>25191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforemethod(java.lang.reflect.Method)[pri:0, instance:testScripts.Module1@51c8530f]">&gt;&gt;beforemethod</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:25</td>   <td>25217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Module1.before()[pri:0, instance:testScripts.Module1@51c8530f]">&gt;&gt;before</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:42</td>   <td>41384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module1.TC102()[pri:0, instance:testScripts.Module1@51c8530f]">TC102</td> 
-  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>19/01/26 09:31:48</td>   <td>47765</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Module1.after()[pri:0, instance:testScripts.Module1@51c8530f]">&lt;&lt;after</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:52</td>   <td>51601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testScripts.Module1@51c8530f]">&lt;&lt;aftermethod</td> 
-<td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
-<tr bgcolor="91936c">  <td>19/01/26 09:31:52</td>   <td>52007</td> <td title="&lt;&lt;BaseClass.aftersuite()[pri:0, instance:testScripts.Module1@51c8530f]">&lt;&lt;aftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1434041222</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/03/09 16:50:50</td>   <td>0</td> <td title="&gt;&gt;BaseClass.beforesuite()[pri:0, instance:testScripts.Module1@74a10858]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/03/09 16:50:50</td>   <td>266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforemethod(java.lang.reflect.Method)[pri:0, instance:testScripts.Module1@74a10858]">&gt;&gt;beforemethod</td> 
+<td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>19/03/09 16:50:51</td>   <td>836</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Module1.before()[pri:0, instance:testScripts.Module1@74a10858]">&gt;&gt;before</td> 
+<td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>19/03/09 16:51:11</td>   <td>21551</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Module1.TC101()[pri:0, instance:testScripts.Module1@74a10858]">TC101</td> 
+  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>19/03/09 16:51:16</td>   <td>26050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Module1.after()[pri:0, instance:testScripts.Module1@74a10858]">&lt;&lt;after</td> 
+<td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/03/09 16:51:20</td>   <td>29625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.aftermethod(org.testng.ITestResult)[pri:0, instance:testScripts.Module1@74a10858]">&lt;&lt;aftermethod</td> 
+<td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
+<tr bgcolor="d677df">  <td>19/03/09 16:51:20</td>   <td>29875</td> <td title="&lt;&lt;BaseClass.aftersuite()[pri:0, instance:testScripts.Module1@74a10858]">&lt;&lt;aftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@614685048</td>   <td></td> </tr>
 </table>
